<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvIdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPtName"
        tools:context=".Ch06RadioGroup" />

    <EditText
        android:id="@+id/etIdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvIdSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtSex" />

        <RadioGroup
            android:id="@+id/rgIdSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbIdMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbPtMale" />

            <RadioButton
                android:id="@+id/rbIdFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbPtFemale" />

            <RadioButton
                android:id="@+id/rbIdNoneSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbPtNonesex" />
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivIdSure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ImageDesc"
        android:src="@drawable/imgbut" />

</LinearLayout>